--- a/files/cloud-init.yaml
+++ b/files/cloud-init.yaml
@@ -1,11 +1,10 @@
-#cloud-init
+#cloud-config
 runcmd:
 - apt-get update
 - apt-get install -y apt-transport-https jq software-properties-common
 - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
 - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
 - apt-get update
-- apt-get -y install docker-ce=5:19.03.8~3-0~ubuntu-bionic
-- usermod -G docker -a ubuntu
+- apt-get -y install docker-ce=5:20.10.8~3-0~ubuntu-focal
 - echo '{"log-driver":"json-file","log-opts":{"max-size":"10m","max-file":"6"}}' | jq . > /etc/docker/daemon.json
 - systemctl restart docker && systemctl enable docker
