--- a/files/cloud-init.yaml
+++ b/files/cloud-init.yaml
@@ -1,10 +1,8 @@
 #cloud-config
 runcmd:
+- export INSTALL_RANCHERD_VERSION=v2.5.9
 - apt-get update
-- apt-get install -y apt-transport-https jq software-properties-common
-- curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-- add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-- apt-get update
-- apt-get -y install docker-ce=5:20.10.8~3-0~ubuntu-focal
-- echo '{"log-driver":"json-file","log-opts":{"max-size":"10m","max-file":"6"}}' | jq . > /etc/docker/daemon.json
-- systemctl restart docker && systemctl enable docker
+- curl -sfL https://get.rancher.io | sh -
+- systemctl enable rancherd-server.service
+- systemctl start rancherd-server.service
+- export KUBECONFIG=/etc/rancher/rke2/rke2.yaml PATH=$PATH:/var/lib/rancher/rke2/bin
