--- a/files/cloud-config.yaml
+++ b/files/cloud-config.yaml
@@ -9,7 +9,7 @@ runcmd:
 
 # set persistent enviroment variables
 write_files:
-- path: ~/.profile
+- path: /root/.profile
   content: |
     export KUBECONFIG=/etc/rancher/rke2/rke2.yaml PATH=$PATH:/var/lib/rancher/rke2/bin
   append: true
