--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ include:
 
 .secrets:
   secrets:
-    hcloud_token:
+    HCLOUD_TOKEN:
       vault: infra/prod/hetzner/HCLOUD_TOKEN@secret
       file: false
     HETZNER_DNS_API_TOKEN:
@@ -18,6 +18,6 @@ include:
     TF_VAR_RANCHER_UI_PASSWORD:
       vault: infra/prod/hetzner/RANCHER_UI_PASSWORD@secret
       file: false
-    # RANCHER_TOKEN_KEY:
-    #   vault: infra/prod/hetzner/RANCHER_TOKEN_KEY@secret
-    #   file: false
+    RANCHER_TOKEN_KEY:
+      vault: infra/prod/hetzner/RANCHER_TOKEN_KEY@secret
+      file: false
