--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,4 +21,16 @@ include:
     TF_RANCHER_TOKEN_KEY:
       vault: infra/prod/hetzner/RANCHER_TOKEN_KEY@secret
       file: false
-    
+
+validate:
+  stage: validate
+  extends: .secrets
+  script:
+    - *install-curl-jq
+    - *gitlab-tf-backend
+    - terraform validate
+    - terraform fmt -check -diff
+    - echo $TF_RANCHER_TOKEN_KEY
+  only:
+    - branches
+    - merge_requests
