--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,9 +15,9 @@ include:
     TF_VAR_HCLOUD_SSH_RANCHER_PUBLIC_KEY:
       vault: infra/prod/hetzner/HCLOUD_SSH_RANCHER_PUBLIC_KEY@secret
       file: false
-    # TF_VAR_RANCHER_UI_PASSWORD:
-    #   vault: infra/prod/hetzner/RANCHER_UI_PASSWORD@secret
-    #   file: false
-    TF_RANCHER_TOKEN_KEY:
+    TF_VAR_RANCHER_UI_PASSWORD:
+      vault: infra/prod/hetzner/RANCHER_UI_PASSWORD@secret
+      file: false
+    TF_VAR_RANCHER_TOKEN_KEY:
       vault: infra/prod/hetzner/RANCHER_TOKEN_KEY@secret
       file: false
