--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -4,7 +4,8 @@
   gather_facts: no
   tasks:
   - name: Update repositories cache
-    update_cache: yes
+    apt:
+      update_cache: yes
 
   - name: download rancherd installation script
     get_url:
