--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -22,6 +22,7 @@
   handlers:
   - name: systemd enable and start rancherd-server
     ansible.builtin.systemd:
+      daemon_reload: yes
       name: rancherd-server
       enabled: yes
       state: started
