--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -15,9 +15,12 @@
       mode: 0755
 
   - name: Execute the rancherd_install.sh
-    shell: /tmp/rancherd_install.sh
+    shell:
+      /tmp/rancherd_install.sh
     notify:
     - systemd enable and start rancherd-server
+    environment:
+      - INSTALL_RANCHERD_VERSION: {{ lookup('env', 'INSTALL_RANCHERD_VERSION') }}
 
   handlers:
   - name: systemd enable and start rancherd-server
