--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -1,31 +1,55 @@
 ---
-- hosts: rancher
+- hosts: k8s_control_plane
   become: yes
   gather_facts: no
+
   tasks:
   - name: Update repositories cache
     apt:
       update_cache: yes
       cache_valid_time: 3600
 
-  - name: download rancherd installation script
-    get_url:
-      url: https://get.rancher.io
-      dest: /tmp/rancherd_install.sh
-      mode: 0755
+  - name: Add conf for containerd
+    blockinfile:
+        path: "/etc/modules-load.d/containerd.conf"
+        block: |
+              overlay
+              br_netfilter
 
-  - name: Execute the rancherd_install.sh
-    shell:
-      /tmp/rancherd_install.sh
+  - name: Set sysctl params
+    blockinfile:
+      path: "/etc/sysctl.d/99-kubernetes-cri.conf"
+      block: |
+            net.bridge.bridge-nf-call-iptables = 1
+            net.ipv4.ip_forward = 1
+            net.bridge.bridge-nf-call-ip6tables = 1
     notify:
-    - systemd enable and start rancherd-server
-    environment:
-      - INSTALL_RANCHERD_VERSION: "{{ lookup('env', 'INSTALL_RANCHERD_VERSION') }}"
+    - Apply sysctl params
+
+  - name: Create containerd directory
+    ansible.builtin.file:
+      path: /etc/containerd
+      state: directory
+
+  - name: Install containerd
+    ansible.builtin.package:
+      name: containerd
+      state: present
+
+  - name: Install containerd default config
+    shell: containerd config default | sudo tee /etc/containerd/config.toml
+    notify:
+    - Restart containerd
 
   handlers:
-  - name: systemd enable and start rancherd-server
+  - name: Apply sysctl params
+    command: sudo sysctl --system
+
+  - name: Restart containerd
     ansible.builtin.systemd:
       daemon_reload: yes
-      name: rancherd-server
+      name: containerd
       enabled: yes
-      state: started
+      state: restarted
+
+    
