--- a/ansible/playbook.yaml
+++ b/ansible/playbook.yaml
@@ -9,6 +9,11 @@
       update_cache: yes
       cache_valid_time: 3600
 
+  - name: Create containerd config file
+    file:
+      path: "/etc/modules-load.d/containerd.conf"
+      state: "touch"
+
   - name: Add conf for containerd
     blockinfile:
         path: "/etc/modules-load.d/containerd.conf"
