--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,3 +26,32 @@ include:
     TF_VAR_RANCHER_TOKEN_KEY:
       vault: infra/prod/hetzner/RANCHER_TOKEN_KEY@secret
       file: false
+
+apply:
+  stage: apply
+  extends: .secrets
+  script:
+    # - *install-curl-jq
+    - *gitlab-tf-backend
+    - terraform apply -auto-approve
+    - DYNAMIC_ENVIRONMENT_URL=$(terraform output -no-color env-dynamic-url)
+    - echo "DYNAMIC_ENVIRONMENT_URL=$DYNAMIC_ENVIRONMENT_URL" >> deploy.env
+    - sleep 86400
+  dependencies:
+    - plan production
+  artifacts:
+    expire_in: 1 week
+    name: $CI_COMMIT_REF_SLUG
+    paths:
+      - inventory
+    reports:
+      dotenv: deploy.env
+  only:
+    - main
+  resource_group: production
+  environment:
+    name: production
+    url: $DYNAMIC_ENVIRONMENT_URL
+    on_stop: destroy
+    auto_stop_in: 12 hours
+
