--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,7 @@ crash.log
 # to change depending on the environment.
 #
 *.tfvars
-.devcontainer
-
+.devcontainer/
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
@@ -33,3 +32,4 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
