--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,6 +31,20 @@ variables:
     TF_VAR_hcloud_ssh_warmichi_public_key:
       vault: infra/prod/hetzner/HCLOUD_SSH_WARMICHI_PUBLIC_KEY@secret
       file: false
+      
+.gitlab-tf-backend: &gitlab-tf-backend
+  - export TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/production
+  - export TF_HTTP_ADDRESS=${TF_ADDRESS}
+  - export TF_HTTP_LOCK_ADDRESS=${TF_ADDRESS}/lock
+  - export TF_HTTP_LOCK_METHOD=POST
+  - export TF_HTTP_UNLOCK_ADDRESS=${TF_ADDRESS}/lock
+  - export TF_HTTP_UNLOCK_METHOD=DELETE
+  - export TF_HTTP_USERNAME=gitlab-ci-token
+  - export TF_HTTP_PASSWORD=${CI_JOB_TOKEN}
+  - export TF_HTTP_RETRY_WAIT_MIN=5
+  - echo "Using HTTP Backend at $TF_HTTP_ADDRESS"
+  - terraform --version
+  - terraform init -reconfigure
 
 apply:
   stage: apply
