change task name

--- a/files/argocd_bootstrap_playbook_task.yml
+++ b/files/argocd_bootstrap_playbook_task.yml
@@ -1,7 +1,7 @@
 - name: Kubernetes Apps | Bootstrap ArgoCD
   become: yes
   kube:
-    name: ArgoCD
+    name: ArgoCD Bootstrap
     kubectl: "{{ bin_dir }}/kubectl"
     filename: "{{ kube_config_dir }}/argocd-bootstrap.yml"
     state: latest
