--- a/files/argocd_bootstrap_playbook_task.yml
+++ b/files/argocd_bootstrap_playbook_task.yml
@@ -1,3 +1,26 @@
+- name: Kubernetes Apps | Set ArgoCD Bootstrap list
+  set_fact:
+    argocd_bootstrap:
+      - name: argocd-repo-server
+        file: argocd-repo-server.yml
+      - name: argocd-cmp-plugin
+        file: argocd-cmp-plugin.yml
+      - name: argocd-vault-configuration
+        file: argocd-vault-configuration.yml
+      - name: argocd-bootstrap-app
+        file: argocd-bootstrap-app.yml
+  when:
+    - "inventory_hostname == groups['kube_control_plane'][0]"
+
+- name: Kubernetes Apps | Copy Boostrap Manifest Files
+  become: yes
+  ansible.builtin.copy:
+    src: "/kubespray/roles/kubernetes-apps/argocd/templates/{{ item.file }}"
+    dest: "{{ kube_config_dir }}/{{ item.file }}"
+  with_items: "{{ argocd_bootstrap | list }}"
+  loop_control:
+    label: "{{ item.file }}"
+
 - name: Kubermetes Apps | Wait for condition ArgoCD Applicationset Controller
   become: yes
   ansible.builtin.shell:
