--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -114,10 +114,9 @@ kics-scan:
 
 merge review:
   stage: plan
-  extends: 
-    - .install-curl-jq
-    - .secrets
+  extends: .secrets
   script:
+    - *install-curl-jq
     - *gitlab-tf-backend
     - terraform plan -out=$PLAN
     - "terraform show --json $PLAN | convert_report > $JSON_PLAN_FILE"
