no install-jq-curl

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,11 +27,6 @@ stages:
   - apply
   - destroy
 
-.install-curl-jq: &install-curl-jq
-  # - apt update
-  # - apt install curl jq
-  - alias convert_report="jq -r '([.resource_changes[].change.actions?]|flatten)|{\"create\":(map(select(.==\"create\"))|length),\"update\":(map(select(.==\"update\"))|length),\"delete\":(map(select(.==\"delete\"))|length)}'"
-
 .gitlab-tf-backend: &gitlab-tf-backend
   - export TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/production
   - export TF_HTTP_ADDRESS=${TF_ADDRESS}
@@ -116,10 +111,9 @@ merge review:
   stage: plan
   extends: .secrets
   script:
-    - *install-curl-jq
     - *gitlab-tf-backend
     - terraform plan -out=$PLAN
-    - "terraform show $PLAN > $JSON_PLAN_FILE"
+    - terraform show --json ${PLAN} | jq -r '([.resource_changes[]?.change.actions?]|flatten)|{"create":(map(select(.=="create"))|length),"update":(map(select(.=="update"))|length),"delete":(map(select(.=="delete"))|length)}' > ${JSON_PLAN_FILE}
   artifacts:
     expire_in: 1 week
     name: plan
@@ -181,7 +175,6 @@ destroy:
   needs: []
   extends: .secrets
   script:
-    # - *install-curl-jq
     - *gitlab-tf-backend
     - terraform destroy -auto-approve
   when: manual
