--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,6 +91,7 @@ validate:
   stage: validate
   extends: .secrets
   script:
+    - echo $TF_VAR_hcloud_ssh_root_public_key
     - *gitlab-tf-backend
     - terraform validate
     - terraform fmt -check -diff
