--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -25,13 +25,12 @@ jobs:
           url: ${{vars.VAULT_ADDR}}
           token: ${{ secrets.VAULT_TOKEN }}
           secrets: |
-            secret/data/prod/hetzner HETZNER_DNS_API_TOKEN;
-            secret/data/prod/hetzner HCLOUD_TOKEN;
-            secret/data/prod/hetzner HCLOUD_SSH_ROOT_PRIVATE_KEY;
-            secret/data/prod/hetzner HCLOUD_SSH_ROOT_PUBLIC_KEY;
-            secret/data/prod/hetzner HCLOUD_SSH_WARMICHI_PRIVATE_KEY;
-            secret/data/prod/hetzner HCLOUD_SSH_WARMICHI_PUBLIC_KEY;
-            secret/data/prod/argocd ARGOCD_VAULT_TOKEN;
+            secret/data/prod/hetzner TF_VAR_HCLOUD_TOKEN;
+            secret/data/prod/hetzner TF_VAR_HCLOUD_SSH_ROOT_PRIVATE_KEY;
+            secret/data/prod/hetzner TF_VAR_HCLOUD_SSH_ROOT_PUBLIC_KEY;
+            secret/data/prod/hetzner TF_VAR_HCLOUD_SSH_WARMICHI_PRIVATE_KEY;
+            secret/data/prod/hetzner TF_VAR_HCLOUD_SSH_WARMICHI_PUBLIC_KEY;
+            secret/data/prod/argocd TF_VAR_ARGOCD_VAULT_TOKEN;
             secret/data/prod/terraform TF_API_TOKEN;
       - name: Checkout
         uses: actions/checkout@v3
