--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -1,68 +1,46 @@
-name: "Terraform Plan"
+name: Terraform
 
 on:
-  pull_request:
+  push:
+    branches:
+      - main
+  # pull_request:
 
 env:
-  TF_CLOUD_ORGANIZATION: "YOUR-ORGANIZATION-HERE"
-  TF_WORKSPACE: "learn-terraform-github-actions"
-  CONFIG_DIRECTORY: "./"
+  tf_actions_working_dir: '${{ env.tf_actions_working_dir }}'
 
 jobs:
-  vault:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Import Secrets
-        id: import-secrets
-        uses: hashicorp/vault-action@v2
-        with:
-          url: ${{vars.VAULT_ADDR}}
-          token: ${{ secrets.VAULT_TOKEN }}
-          secrets: |
-            secret/prod/hetzner/HETZNER_DNS_API_TOKEN;
-            secret/prod/hetzner/HCLOUD_TOKEN;
-            secret/prod/hetzner/HCLOUD_SSH_ROOT_PRIVATE_KEY;
-            secret/prod/hetzner/HCLOUD_SSH_ROOT_PUBLIC_KEY;
-            secret/prod/hetzner/HCLOUD_SSH_WARMICHI_PUBLIC_KEY;
-            secret/prod/hetzner/HCLOUD_SSH_WARMICHI_PUBLIC_KEY;
-            secret/prod/argocd/ARGOCD_VAULT_TOKEN;
-            secret/prod/hetzner/TF_API_TOKEN;
   terraform:
-    if: github.repository != 'hashicorp-education/learn-terraform-github-actions'
-    name: "Terraform Plan"
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pull-requests: write
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
-      - name: Upload Configuration
-        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
-        id: plan-upload
-        with:
-          workspace: ${{ env.TF_WORKSPACE }}
-          directory: ${{ env.CONFIG_DIRECTORY }}
-          speculative: true
-
-      - name: Create Plan Run
-        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
-        id: plan-run
-        with:
-          workspace: ${{ env.TF_WORKSPACE }}
-          configuration_version: ${{ steps.plan-upload.outputs.configuration_version_id }}
-          plan_only: true
-
-      - name: Get Plan Output
-        uses: hashicorp/tfc-workflows-github/actions/plan-output@v1.0.0
-        id: plan-output
-        with:
-          plan: ${{ fromJSON(steps.plan-run.outputs.payload).data.relationships.plan.data.id }}
-
-      - name: Update PR
-        uses: actions/github-script@v6
-        id: plan-comment
+      
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+    
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt -check
+        continue-on-error: true
+    
+      - name: Terraform Init
+        id: init
+        run: terraform init
+    
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+    
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color
+        continue-on-error: true
+    
+      - uses: actions/github-script@v6
+        if: github.event_name == 'pull_request'
+        env:
+          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
@@ -71,27 +49,49 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-            });
+            })
             const botComment = comments.find(comment => {
-              return comment.user.type === 'Bot' && comment.body.includes('Terraform Cloud Plan Output')
-            });
-            const output = `#### Terraform Cloud Plan Output
-               \`\`\`
-               Plan: ${{ steps.plan-output.outputs.add }} to add, ${{ steps.plan-output.outputs.change }} to change, ${{ steps.plan-output.outputs.destroy }} to destroy.
-               \`\`\`
-               [Terraform Cloud Plan](${{ steps.plan-run.outputs.run_link }})
-               `;
-            // 3. Delete previous comment so PR timeline makes sense
+              return comment.user.type === 'Bot' && comment.body.includes('Terraform Format and Style')
+            })
+    
+            // 2. Prepare format of the comment
+            const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
+            #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
+            <details><summary>Validation Output</summary>
+    
+            \`\`\`\n
+            ${{ steps.validate.outputs.stdout }}
+            \`\`\`
+    
+            </details>
+    
+            #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
+    
+            <details><summary>Show Plan</summary>
+    
+            \`\`\`\n
+            ${process.env.PLAN}
+            \`\`\`
+    
+            </details>
+    
+            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ env.tf_actions_working_dir }}\`, Workflow: \`${{ github.workflow }}\`*`;
+    
+            // 3. If we have a comment, update it, otherwise create a new one
             if (botComment) {
-              github.rest.issues.deleteComment({
+              github.rest.issues.updateComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 comment_id: botComment.id,
-              });
+                body: output
+              })
+            } else {
+              github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: output
+              })
             }
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            });
+    
