--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -6,11 +6,13 @@ on:
       - main
   # pull_request:
 
-env:
-  tf_actions_working_dir: '${{ env.tf_actions_working_dir }}'
-
 jobs:
   terraform:
+    defaults:
+      run:
+        working-directory: ${{ env.tf_actions_working_dir }}
+    permissions:
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
