--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -5,8 +5,6 @@ on:
     branches:
       - main
   # pull_request:
-env:
-  TF_VAR_token: ${{secrets.TFC_TOKEN}}
 
 jobs:
   terraform:
@@ -17,11 +15,25 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       
+      - name: Vault Secrets
+        uses: hashicorp/vault-action@v2
+        with:
+          url: ${{vars.VAULT_ADDR}}
+          token: ${{ secrets.VAULT_TOKEN }}
+          secrets: |
+            secret/data/prod/hetzner HCLOUD_TOKEN | TF_VAR_HCLOUD_TOKEN;
+            secret/data/prod/hetzner HCLOUD_SSH_ROOT_PRIVATE_KEY | TF_VAR_HCLOUD_SSH_ROOT_PRIVATE_KEY;
+            secret/data/prod/hetzner HCLOUD_SSH_ROOT_PUBLIC_KEY | TF_VAR_HCLOUD_SSH_ROOT_PUBLIC_KEY;
+            secret/data/prod/hetzner HCLOUD_SSH_WARMICHI_PRIVATE_KEY | TF_VAR_HCLOUD_SSH_WARMICHI_PRIVATE_KEY;
+            secret/data/prod/hetzner HCLOUD_SSH_WARMICHI_PUBLIC_KEY | TF_VAR_HCLOUD_SSH_WARMICHI_PUBLIC_KEY;
+            secret/data/prod/argocd ARGOCD_VAULT_TOKEN | TF_VAR_ARGOCD_VAULT_TOKEN;
+            secret/data/prod/terraform TF_API_TOKEN;
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
           cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
-          
+
       - name: Terraform fmt
         id: fmt
         run: terraform fmt -check
