--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -49,7 +49,9 @@ jobs:
     
       - name: Terraform Plan
         id: plan
-        run: terraform plan -no-color
+        run: | 
+          TF_VAR_HCLOUD_TOKEN = "${{ env.TF_VAR_HCLOUD_TOKEN }}"
+          terraform plan -no-color
         continue-on-error: true
     
       - uses: actions/github-script@v6
