--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+          cli_config_credentials_token: ${{ env.TF_API_TOKEN }}
 
       - name: Terraform fmt
         id: fmt
@@ -49,9 +49,7 @@ jobs:
     
       - name: Terraform Plan
         id: plan
-        run: | 
-          export TF_VAR_HCLOUD_TOKEN="${{ env.TF_VAR_HCLOUD_TOKEN }}"
-          terraform plan -no-color
+        run: terraform plan -no-color
         continue-on-error: true
     
       - uses: actions/github-script@v6
