--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -1,25 +1,20 @@
-name: "Terraform Apply"
+name: Terraform
 
 on:
   push:
     branches:
       - main
 
-env:
-  TF_CLOUD_ORGANIZATION: "warmichi"
-  TF_WORKSPACE: "hetzner"
-  CONFIG_DIRECTORY: "./"
-
 jobs:
   terraform:
-    if: github.repository != 'hashicorp-education/learn-terraform-github-actions'
-    name: "Terraform Apply"
-    runs-on: ubuntu-latest
     permissions:
-      contents: read
+      pull-requests: write
+    runs-on: ubuntu-latest
     steps:
-      - name: Import Secrets
-        id: import-secrets
+      - name: Checkout
+        uses: actions/checkout@v3
+      
+      - name: Vault Secrets
         uses: hashicorp/vault-action@v2
         with:
           url: ${{vars.VAULT_ADDR}}
@@ -32,27 +27,31 @@ jobs:
             secret/data/prod/hetzner HCLOUD_SSH_WARMICHI_PUBLIC_KEY | TF_VAR_HCLOUD_SSH_WARMICHI_PUBLIC_KEY;
             secret/data/prod/argocd ARGOCD_VAULT_TOKEN | TF_VAR_ARGOCD_VAULT_TOKEN;
             secret/data/prod/terraform TF_API_TOKEN;
-      - name: Checkout
-        uses: actions/checkout@v3
 
-      - name: Upload Configuration
-        uses: hashicorp/tfc-workflows-github/actions/upload-configuration@v1.0.0
-        id: apply-upload
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
         with:
-          workspace: ${{ env.TF_WORKSPACE }}
-          directory: ${{ env.CONFIG_DIRECTORY }}
+          cli_config_credentials_token: ${{ env.TF_API_TOKEN }}
 
-      - name: Create Apply Run
-        uses: hashicorp/tfc-workflows-github/actions/create-run@v1.0.0
-        id: apply-run
-        with:
-          workspace: ${{ env.TF_WORKSPACE }}
-          configuration_version: ${{ steps.apply-upload.outputs.configuration_version_id }}
-
-      - name: Apply
-        uses: hashicorp/tfc-workflows-github/actions/apply-run@v1.0.0
-        if: fromJSON(steps.apply-run.outputs.payload).data.attributes.actions.IsConfirmable
+      - name: Terraform fmt
+        id: fmt
+        run: terraform fmt -check
+        continue-on-error: true
+    
+      - name: Terraform Init
+        id: init
+        run: terraform init
+    
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+    
+      - name: Terraform Plan
+        id: plan
+        run: terraform plan -no-color
+        continue-on-error: true
+    
+      - name: Terraform Apply
         id: apply
-        with:
-          run: ${{ steps.apply-run.outputs.run_id }}
-          comment: "Apply Run from GitHub Actions CI ${{ github.sha }}"
+        run: terraform apply -no-color
+    
