--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -53,5 +53,5 @@ jobs:
     
       - name: Terraform Apply
         id: apply
-        run: terraform apply -no-color
+        run: terraform apply -auto-approve -no-color
     
