--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -51,5 +51,5 @@ jobs:
     
       - name: Terraform Apply
         id: apply
-        run: sudo -E terraform apply -auto-approve -no-color
+        run: terraform apply -auto-approve -no-color
     
