--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          cli_config_credentials_token: ${{ env.TF_API_TOKEN }}
+          cli_config_credentials_token: ${{ env.TF_API_TKEN }}
 
       - name: Terraform fmt
         id: fmt
